--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.1.3",
+    "@material-ui/icons": "4.2.1",
     "@types/jest": "24.0.15",
+    "@types/material-ui": "0.21.6",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "moment": "2.24.0",
     "prettier": "1.18.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
