--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "dependencies": {
     "@material-ui/core": "4.1.3",
     "@material-ui/icons": "4.2.1",
+    "@testing-library/react": "8.0.4",
     "@types/jest": "24.0.15",
     "@types/material-ui": "0.21.6",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "4.1.16",
+    "jest-dom": "3.5.0",
+    "jest-fetch-mock": "2.1.2",
     "moment": "2.24.0",
     "prettier": "1.18.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
+    "react-testing-library": "8.0.1",
     "styled-components": "4.3.2",
     "typescript": "3.5.2"
   },
@@ -40,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "24.8.0",
+    "ts-jest": "24.0.2"
   }
 }
