--- a/package.json
+++ b/package.json
@@ -5,19 +5,16 @@
   "dependencies": {
     "@material-ui/core": "4.1.3",
     "@material-ui/icons": "4.2.1",
-    "@testing-library/react": "8.0.4",
-    "@types/jest": "24.0.15",
     "@types/material-ui": "0.21.6",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "4.1.16",
-    "jest-dom": "3.5.0",
-    "jest-fetch-mock": "2.1.2",
     "moment": "2.24.0",
     "prettier": "1.18.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "react-testing-library": "8.0.1",
     "styled-components": "4.3.2",
@@ -46,7 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "8.0.4",
+    "@types/jest": "24.0.15",
     "jest": "24.8.0",
+    "jest-dom": "3.5.0",
+    "jest-fetch-mock": "2.1.2",
     "ts-jest": "24.0.2"
   }
 }
